<resources>
    <string name="app_name">NurbanHoney</string>


    <string name="test_string">test</string>
    <string name="rank">랭킹</string>
    <string name="nurban">너반꿀</string>
    <string name="free">자유</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="prefs_nurban_token_key">NurbanToken</string>
    <string name="prefs_user_id">UserId</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="failure_network_connection">No Network Connection.</string>
    <string name="failure_server_error">Server Error</string>
    <string name="failure_else_error">Else Error</string>

    <string name="snack_bar_msg_login_canceled">로그인이 취소 되었습니다</string>
    <string name="snack_bar_msg_canceled">취소 되었습니다</string>

    <string name="article_title_str">제목 : </string>
    <string name="article_author_str">작성자 : </string>
    <string name="article_inquiries_str">조회수 : </string>

    <string name="comment_drop_up">댓글 입력</string>
    <string name="comment_drop_down">댓글 입력 숨김</string>
    <string name="comment_modify_str">수정</string>
    <string name="comment_delete_str">삭제</string>
    <string name="comment_update_str">완료</string>
    <string name="comment_cancel_str">취소</string>

    <string name="text_editor_uploaded"></string>

    <!-- profile -->
    <string name="profile_edit_str">편집하기</string>
    <string name="profile_nickname_str">닉네임</string>
    <string name="profile_point_str">포인트</string>
    <string name="profile_description_str">설명</string>
    <string name="profile_insignia_show_str">보여주는 휘장</string>
    <string name="profile_insignia_own_str">소유한 휘장</string>
    <string name="profile_myarticle_str">내 글 수</string>
    <string name="profile_mycomment_str">내 댓글 수</string>
    <string name="comment_max_lines_hint">댓글 길이는 %1$d자, %2$d줄로 제한됩니다.</string>
</resources>
